final thoughts and next steps

--- a/qaoa_project.ipynb
+++ b/qaoa_project.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "Goal: Understand the basics of building, running, and analyzing a quantum circuit in Qiskit\n",
     "\n",
-    "Reflection: This uses the same principles behind discretizing TDSE on a grid for solving \n"
+    "Reflection: This uses the same principles behind discretizing TDSE on a grid for solving \n",
+    "\n",
+    "Next logical steps: going to p=2 for another optimization layer, use scipy for param opt instead of brute force \n"
    ]
   },
   {
